<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.dmpm.tabletennis.ConnectMenu"
                android:background="#ffffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffffff"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:scaleType="matrix"
            android:src="@drawable/feup_logo" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="16dp"
            android:layout_gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_connect"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingBottom="16dp"
                android:textStyle="bold"/>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:baselineAligned="false"
                >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="left|center"
                    android:text="@string/menu_hostip" />

                <EditText
                    android:id="@+id/txtIP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:inputType="text"
                    android:text="127.0.0.1"
                    android:minLines="0"
                    android:maxLength="16"
                    android:minWidth="192dp"
                    android:layout_gravity="left"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center|left"
                    android:text="@string/menu_port" />

                <EditText
                    android:id="@+id/txtPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:ems="4"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="8080"
                    android:layout_gravity="left"
                    android:maxLength="4"
                    android:nestedScrollingEnabled="false"
                    />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/lblPreferences"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/menu_preferences"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:linksClickable="false"
                    android:paddingBottom="16dp"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/lblUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="left|center"
                    android:text="@string/menu_username" />

                <EditText
                    android:id="@+id/txtUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:ems="10"
                    android:inputType="textAutoCorrect"
                    android:text="Anonymous"
                    android:maxWidth="192dp"
                    android:layout_gravity="left"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/lblColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center|left"
                    android:text="@string/menu_color" />

                <Spinner
                    android:id="@+id/spnColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:focusable="false"
                    android:layout_gravity="left"
                    android:entries="@array/color_array" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/llayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_connect"
                android:enabled="true"
                android:layout_gravity="center_vertical"/>

            <Button
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/button_exit" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
